--- a/projeto01/css/orlando.css
+++ b/projeto01/css/orlando.css
@@ -4,10 +4,18 @@
     font-size: 1em;
 }
 
+@font-face {
+    font-family: 'OpenSans-Light';
+    src: url("../fonts/Open_Sans/OpenSans-Light.ttf");
+    font-size: 1em;
+}
+
 header {
     width: 100%;
     height: 150px;
-    background-color: #5E299A;   
+    background-color: rgba(94, 41, 154, 0.8);
+    z-index: 2;
+    position: relative;
 }
 
 header .container {
@@ -126,7 +134,7 @@ header #logotipo {
 }
 
 #menu {
-    margin: 26px 0;
+    margin: 12px 0;
 }
 
 #menu li {
@@ -146,17 +154,303 @@ header #logotipo {
     line-height: 30px;
 }
 
+#menu li.search .input-group {
+    top: 8px;
+}
+
 #menu li.search ::-webkit-input-placeholder {
     color: #FFF;
 }
 
-#menu li.search input::-moz-placeholder {
+#menu li.search ::-moz-input-placeholder {
     color: #FFF;
 }
 
+#menu li.search button {
+    background: none;
+    border: none;
+    position: absolute;
+    right: 3px;
+    top: 7px;
+}
+
+#menu li.search button {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.5);
+}
 
 #menu li a {
     font-size: 16px;
     color: #FFF;
     padding: 10px 25px;  
+}
+
+#banner {
+    width: 100%;
+    height: 728px;
+    position: relative;
+    background: url("../img/banner.jpg") no-repeat;
+    background-position: 0px -100px;
+    top: -110px;
+    background-size: cover;
+}
+
+#banner h1 {
+    position: relative;
+    color: #FFF;
+    top: 300px;
+    font-size: 92px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 45);
+    font-family: 'OpenSans-Light';
+    margin-left: 50px;
+}
+
+#banner h1 small{
+    font-size: 32px;
+    display: block;
+    color: #FFF;
+    font-family: 'OpenSans';
+    font-weight: bold;
+    margin-left: 6px;
+}
+
+#news {
+    position: relative;
+    top: -110px;
+}
+
+#news h2 {
+    color: #5E2799;
+    font-family: 'OpenSans-Light';
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+#news hr {
+    border: #FDE192 solid 4px;
+    width: 200px;
+    margin: 0 auto;
+}
+
+#news .thumbnails {
+    margin-top: 20px;   
+}
+
+#news .thumbnails h3 {
+    color: #5E299A;
+    font-size: 18px;
+    font-family: 'OpenSans';
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+#news .thumbnails time {
+    color: #A7A7A7;
+    font-size: 18px;
+    font-family: 'OpenSans';
+}
+
+#estatisticas {
+    background-color: #5E299A;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+}
+
+#estatisticas p {
+    color: #FDE092;
+    text-transform: uppercase;
+    font-family: 'OpenSans-Light';
+    font-size: 64px;
+    margin-top: 36px;
+}
+
+#estatisticas p small{
+    color: #FFF;
+    font-size: 24px;
+    display: block;
+}
+
+#call-to-action {
+    text-align: center;
+    margin-top: 105px;
+}
+
+#call-to-action h2 {
+    color: #5E2799;
+    font-family: 'OpenSans-Light';
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+#call-to-action hr {
+    border: #FDE192 solid 4px;
+    width: 200px;
+    margin: 0 auto;
+}
+
+#call-to-action p {
+    margin-top: 60px;
+    margin-bottom: 40px;
+    color: #656565;
+}
+
+#call-to-action .btn {
+    min-width: 164px;
+    height: 44px;
+    line-height: 34px;
+    border-radius: 0;
+}
+
+#call-to-action .btn-roxo {
+    color: #FFF;
+    background-color: #5B299A;
+    border-color: #5B299A;
+}
+
+#call-to-action .btn-amarelo {
+    color: #000;
+    background-color: #FDE192;
+    border-color: #FDE192;
+}
+
+#call-to-action .row-max-400 {
+    margin: 0 auto;
+    max-width: 400px;
+}
+
+footer {
+    margin-top: 110px;
+}
+
+footer .row {
+    width: 100%;
+    margin-left: 0;
+}
+
+footer .row p {
+    line-height: 55px;
+    margin-bottom: 0;
+}
+
+footer .row-cinza-claro {
+    height: 200px;
+    background-color: #171F26;
+}
+
+footer .row-cinza-escuro {
+    height: 60px;
+    background-color: #11171D;
+    border-top: #242D37 1px solid;
+}
+
+footer .pull-left {
+    color: #666;
+    font-family: 'OpenSans';
+    font-size: 14px;
+}
+
+footer .text-roxo {
+    color: #623291;
+    font-family: 'OpenSans';
+    font-weight: bold;
+    font-size: 14px;
+}
+
+footer .logotipo {
+    margin-top: 28px;
+}
+
+footer .col-popular-post,
+footer .col-links,
+footer .col-get-in-touch {
+    margin-top: 40px;
+}
+
+footer .row-cols h4 {
+    font-family: 'OpenSans';
+    font-size: 16px;
+    color: #FFF;
+    text-transform: uppercase;
+    padding-bottom: 17px;
+    border-bottom: #242D37 1px solid;
+}
+
+footer .row-cols h5 {
+    color: #666;
+    font-family: Arial;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+footer .row-cols time {
+    color: #FDE092;
+    font-family: Arial;
+    font-size: 14px;
+}
+
+footer .col-links a {
+    color: #FFF;
+    font-family: Arial;
+    font-size: 14px;
+}
+
+footer .col-links .fa {
+    margin: 0 6px;
+}
+
+footer .col-get-in-touch address {
+    color: #666;
+    font-family: Arial;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+footer .col-get-in-touch address span {
+    display: inline-block;
+}
+
+footer .col-get-in-touch address i {
+    position: relative;
+    top: -14px;
+}
+
+footer .col-get-in-touch i {
+    color: #9B9B9B;
+    font-size: 20px;
+    margin: 0 6px;
+}
+
+footer .col-get-in-touch a {
+    color: #666;
+}
+
+footer .col-get-in-touch p {
+    line-height: 20px;
+}
+
+footer .list-socials {
+    margin-top: 4px;
+}
+
+footer .list-socials li{
+    display: inline-block;
+    margin-right: 8px;
+}
+
+footer .list-socials a {
+    display: block;
+    border: #9B9B9B 1px solid;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+    border-radius: 14px;
+    text-align: center;
+}
+
+footer .list-socials i {
+    font-size: 16px;
+    margin: 7px auto;
 }
